--- a/0625_python_define.ipynb
+++ b/0625_python_define.ipynb
@@ -486,4 +486,317 @@
         "id": "maQ-k308qaoe"
       }
     },
-   
+    {
+      "cell_type": "markdown",
+      "source": [
+        "클래스 정의, 접근은 (클래스이름.클래스변수) 쩜으로 접근가능"
+      ],
+      "metadata": {
+        "id": "XT7n1VPfjB44"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {
+        "id": "NZ7xwGCgggfx"
+      },
+      "outputs": [],
+      "source": [
+        "class MyClass:\n",
+        "  x = 5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p1 = MyClass()\n",
+        "print(p1.x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bJsslxxujUz4",
+        "outputId": "1ee6d81d-2e0b-4f64-f0e8-afe1a68e25be"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Person이라는 클래스안에, __init__()함수를 정의했다. 함수내부에서는 자기자신의 이름과 나이 정보가 있다."
+      ],
+      "metadata": {
+        "id": "UVUOSYXIjuHk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  def __init__(self, name, age):\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "\n",
+        "p1 = Person(\"John\", 36)\n",
+        "\n",
+        "print(p1.name)\n",
+        "print(p1.age)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KND3IRAajfg4",
+        "outputId": "186fd6e7-c7ef-430e-b113-d7d6d7210f43"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John\n",
+            "36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "그냥 클래스 객체만 출력하면 원하는 결과를 얻지못함. p1.name 으로 클래스 오브젝트에 접근해야함"
+      ],
+      "metadata": {
+        "id": "qWMUSyONkMoH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  def __init__(self, name, age):\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "\n",
+        "p1 = Person(\"John\", 36)\n",
+        "\n",
+        "print(p1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XS1frLpOkAUT",
+        "outputId": "af9e4ed2-ba90-4121-af1f-e08ca8466260"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Person object at 0x79351daef190>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "아예 클래스 내부에서 f-string \"{}\" 으로 클래스 오브젝트에 접근하는 함수까지 만들었다"
+      ],
+      "metadata": {
+        "id": "HOvGjn33kcwY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  def __init__(self, name, age):\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f\"{self.name}({self.age})\"\n",
+        "\n",
+        "p1 = Person(\"John\", 36)\n",
+        "\n",
+        "print(p1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yyn4-iU_kWTy",
+        "outputId": "54825b7f-d86c-407e-8f81-75826a35f6d3"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John(36)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "매개변수이름이 self 라서, p1인자가 self자리로 들어가는 것. 클래스 오브젝트에 접근하는 방식은 쩜으로 똑같다"
+      ],
+      "metadata": {
+        "id": "xbPiaWXFktWs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  def __init__(self, name, age):\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "\n",
+        "  def myfunc(self):\n",
+        "    print(\"Hello my name is \" + self.name)\n",
+        "\n",
+        "p1 = Person(\"John\", 36)\n",
+        "p1.myfunc()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vf4qfbNrkrB5",
+        "outputId": "bdeb0af3-0458-4264-f05e-d78444a6dc7e"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello my name is John\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "위의 코드에서 출력해주는 함수의 매개변수를 다르게 주었다. 그래도 같은 클래스이므로 p1 인자를 동일하게 사용한다"
+      ],
+      "metadata": {
+        "id": "bw-vke5dlXWP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  def __init__(mysillyobject, name, age):\n",
+        "    mysillyobject.name = name\n",
+        "    mysillyobject.age = age\n",
+        "\n",
+        "  def myfunc(abc):\n",
+        "    print(\"Hello my name is \" + abc.name)\n",
+        "\n",
+        "p1 = Person(\"John\", 36)\n",
+        "p1.myfunc()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y4ffgrWrlVAM",
+        "outputId": "ae277480-2fc1-43e2-e3fb-06b12eae7db2"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello my name is John\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "클래스 접근법은 p1.age 이고, del 명령어로 \"클래스 객체\"를 삭제할수있다."
+      ],
+      "metadata": {
+        "id": "QtlbgoeUmJBf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p1.age = 40"
+      ],
+      "metadata": {
+        "id": "8PKv4VADlu5N"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del p1.age"
+      ],
+      "metadata": {
+        "id": "Vze1H_1OlxYJ"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del p1"
+      ],
+      "metadata": {
+        "id": "Mqztpe6fly_H"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "빈 클래스를 만들고싶으면 내용을 pass 로 채우면된다."
+      ],
+      "metadata": {
+        "id": "RC5h6oOWmCXv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "KFJeV60Il5Zz"
+      },
+      "execution_count": 70,
+      "outputs": []
+    }
+  ]
+}
