Colab을 통해 생성됨

--- a/0625_python_define.ipynb
+++ b/0625_python_define.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPwlGF4zl5Oh6V0GaJamC5D",
+      "authorship_tag": "ABX9TyMLtwnGAt0fTQoZ1hduhDxC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,15 +30,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WQtYM0yUfZ58"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "class Person:\n",
         "    def __init__(self, name):\n",
@@ -50,14 +41,142 @@
       "metadata": {
         "id": "9xezREkXgqh7"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "클래스 Person: def init (self, name): self.name = name\n"
+      ],
       "metadata": {
-        "id": "Qh-TPf7JiaDT"
+        "id": "sY1_6C1Uuh9z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Counter:\n",
+        "    def __init__(self):\n",
+        "        self.count = 0\n",
+        "\n",
+        "    def add(self):\n",
+        "        self.count += 1\n",
+        "        print(\"현재 값:\", self.count)\n",
+        "\n",
+        "c = Counter()\n",
+        "c.add()\n",
+        "c.add()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DjtXUz4_ujyE",
+        "outputId": "3692d0c4-9e4b-4a46-abbc-8686d4f101a9"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "현재 값: 1\n",
+            "현재 값: 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "클래스 - 숫자세기\n",
+        "### **굵은 텍스트**"
+      ],
+      "metadata": {
+        "id": "Ymv6n2q6utT-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangle:\n",
+        "    def __init__(self, width, height):\n",
+        "        self.width = width\n",
+        "        self.height = height\n",
+        "\n",
+        "    def area(self):\n",
+        "        return self.width * self.height\n",
+        "\n",
+        "r = Rectangle(4, 5)\n",
+        "print(\"넓이:\", r.area())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aX-jQsq8uwxX",
+        "outputId": "dcbefdaf-9383-471e-83bf-7305cf3a9a21"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "넓이: 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "클래스 - 넓이 구하기"
+      ],
+      "metadata": {
+        "id": "61b8QRqmuzj5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    def __init__(self, name, scores):\n",
+        "        self.name = name\n",
+        "        self.scores = scores\n",
+        "\n",
+        "    def average(self):\n",
+        "        return sum(self.scores) / len(self.scores)\n",
+        "\n",
+        "s = Student(\"지민\", [90, 80, 70])\n",
+        "print(f\"{s.name}의 평균 점수:\", s.average())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9iZ2DmbHuwwc",
+        "outputId": "10178934-8bca-48cd-db3d-2403deeb6c0a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "지민의 평균 점수: 80.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "클래스 - 점수 평균구하기\n"
+      ],
+      "metadata": {
+        "id": "F7KZfcBWu70n"
       }
     }
   ]
