Colab을 통해 생성됨

--- a/0625_for&while.ipynb
+++ b/0625_for&while.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOc8zc6M45XyTiajlnhzuD0",
+      "authorship_tag": "ABX9TyNjvuUQFiXuEkJJ3hbcQd3G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -350,11 +350,11 @@
         "print(\"총합이 100을 넘었습니다:\", total)\n"
       ],
       "metadata": {
-        "id": "oroGVuxf86eN",
-        "outputId": "19013736-3304-4f07-f652-44593652f6b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oroGVuxf86eN",
+        "outputId": "19013736-3304-4f07-f652-44593652f6b2"
       },
       "execution_count": 11,
       "outputs": [
@@ -363,6 +363,442 @@
           "name": "stdout",
           "text": [
             "총합이 100을 넘었습니다: 105\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##자율주행 자동차 예시 코드"
+      ],
+      "metadata": {
+        "id": "Hu-P2EHb9Wtm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "앞에 있는 장애물까지의 거리를 여러 센서에서 읽어서 데이터 출력하기\n"
+      ],
+      "metadata": {
+        "id": "iV9hxFKW9fyO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sensor_values = [0.2, 0.4, 0.3, 0.7, 0.5]  # 거리 센서 데이터 (단위: m)\n",
+        "\n",
+        "for value in sensor_values:\n",
+        "    print(\"센서 감지 거리:\", value, \"m\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QxAOu5Sm9g2_",
+        "outputId": "be76525e-46c6-4533-b6e5-1db5b2207cbd"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "센서 감지 거리: 0.2 m\n",
+            "센서 감지 거리: 0.4 m\n",
+            "센서 감지 거리: 0.3 m\n",
+            "센서 감지 거리: 0.7 m\n",
+            "센서 감지 거리: 0.5 m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "특정 속도로 일정 시간 동안 주행"
+      ],
+      "metadata": {
+        "id": "wR2Yh3TG9iRp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "speed = 60  # km/h\n",
+        "\n",
+        "for second in range(1, 6):  # 1초부터 5초까지\n",
+        "    print(f\"{second}초 동안 {speed}km/h로 주행 중...\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9WF0we-N9kv_",
+        "outputId": "2417fb15-a1d3-4684-de82-a5c37cc89f5d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1초 동안 60km/h로 주행 중...\n",
+            "2초 동안 60km/h로 주행 중...\n",
+            "3초 동안 60km/h로 주행 중...\n",
+            "4초 동안 60km/h로 주행 중...\n",
+            "5초 동안 60km/h로 주행 중...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "차선 감지 결과 판단\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6CwL4k7T9nAU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lane_status = [\"정상\", \"정상\", \"이탈\", \"정상\", \"이탈\"]\n",
+        "\n",
+        "for status in lane_status:\n",
+        "    if status == \"이탈\":\n",
+        "        print(\"❗ 차선 이탈! 경고 발생\")\n",
+        "    else:\n",
+        "        print(\"✔ 차선 유지 중\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TdMNfZo19oed",
+        "outputId": "21b6cbfb-ee28-490e-f40f-a87244844f76"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✔ 차선 유지 중\n",
+            "✔ 차선 유지 중\n",
+            "❗ 차선 이탈! 경고 발생\n",
+            "✔ 차선 유지 중\n",
+            "❗ 차선 이탈! 경고 발생\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "교통 표지판 인식 결과 출력"
+      ],
+      "metadata": {
+        "id": "XVwdcVxl9m_i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "signs = [\"속도제한\", \"정지\", \"횡단보도\", \"신호등\"]\n",
+        "\n",
+        "for sign in signs:\n",
+        "    print(\"인식된 표지판:\", sign)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A_fRXGpz9oNJ",
+        "outputId": "847ddbef-6d87-4db6-aa73-3016b30b482d"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "인식된 표지판: 속도제한\n",
+            "인식된 표지판: 정지\n",
+            "인식된 표지판: 횡단보도\n",
+            "인식된 표지판: 신호등\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "주행 로그 저장 (시간별 위치)"
+      ],
+      "metadata": {
+        "id": "PsRJgiat9sqj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "positions = [(0, 0), (1, 0), (2, 1), (3, 2), (4, 3)]\n",
+        "\n",
+        "for t in range(len(positions)):\n",
+        "    x, y = positions[t]\n",
+        "    print(f\"{t}초 후 위치: ({x}, {y})\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KLtq11Dx9try",
+        "outputId": "1a3f6533-497c-40c9-f53e-0fa98cdb343e"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0초 후 위치: (0, 0)\n",
+            "1초 후 위치: (1, 0)\n",
+            "2초 후 위치: (2, 1)\n",
+            "3초 후 위치: (3, 2)\n",
+            "4초 후 위치: (4, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##while문"
+      ],
+      "metadata": {
+        "id": "0DBHLukn9voz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " 충돌 직전까지 전진"
+      ],
+      "metadata": {
+        "id": "ICXFTCnn9xYZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distance = 10  # 전방 장애물까지의 거리 (단위: m)\n",
+        "\n",
+        "while distance > 1:\n",
+        "    print(\"전진 중... 남은 거리:\", distance, \"m\")\n",
+        "    distance -= 1\n",
+        "\n",
+        "print(\"⚠ 멈춤! 장애물 앞 1m\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fXtBRJqB91gl",
+        "outputId": "4b3c979c-4d84-45fa-fdd6-16ce6f7c6086"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "전진 중... 남은 거리: 10 m\n",
+            "전진 중... 남은 거리: 9 m\n",
+            "전진 중... 남은 거리: 8 m\n",
+            "전진 중... 남은 거리: 7 m\n",
+            "전진 중... 남은 거리: 6 m\n",
+            "전진 중... 남은 거리: 5 m\n",
+            "전진 중... 남은 거리: 4 m\n",
+            "전진 중... 남은 거리: 3 m\n",
+            "전진 중... 남은 거리: 2 m\n",
+            "⚠ 멈춤! 장애물 앞 1m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "차선 이탈 시 복귀 시도"
+      ],
+      "metadata": {
+        "id": "yCbMbY4892sX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lane_position = -2  # 음수면 왼쪽으로 이탈한 상태\n",
+        "\n",
+        "while lane_position != 0:\n",
+        "    if lane_position < 0:\n",
+        "        print(\"→ 오른쪽으로 복귀 중\")\n",
+        "        lane_position += 1\n",
+        "    elif lane_position > 0:\n",
+        "        print(\"← 왼쪽으로 복귀 중\")\n",
+        "        lane_position -= 1\n",
+        "\n",
+        "print(\"✔ 차선 중앙 복귀 완료\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1MdKyUVT93wI",
+        "outputId": "7d358bfa-b44d-48f6-aca4-9a5464b9d6b8"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "→ 오른쪽으로 복귀 중\n",
+            "→ 오른쪽으로 복귀 중\n",
+            "✔ 차선 중앙 복귀 완료\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "연료가 떨어질 때까지 주행\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qtO0sd37941i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fuel = 5  # 단위: L\n",
+        "\n",
+        "while fuel > 0:\n",
+        "    print(\"주행 중... 연료:\", fuel, \"L\")\n",
+        "    fuel -= 1\n",
+        "\n",
+        "print(\"⛽ 연료 소진! 정차합니다.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xhV2XdXc96u8",
+        "outputId": "4f685306-7893-4a6e-82e4-e8b36904750c"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "주행 중... 연료: 5 L\n",
+            "주행 중... 연료: 4 L\n",
+            "주행 중... 연료: 3 L\n",
+            "주행 중... 연료: 2 L\n",
+            "주행 중... 연료: 1 L\n",
+            "⛽ 연료 소진! 정차합니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "정지 신호 대기"
+      ],
+      "metadata": {
+        "id": "7No5jA8j98dN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "traffic_light = \"red\"\n",
+        "\n",
+        "while traffic_light == \"red\":\n",
+        "    print(\"🔴 신호 대기 중...\")\n",
+        "    traffic_light = input(\"신호등 색상 입력 (red/green): \")\n",
+        "\n",
+        "print(\"🟢 신호 변경됨! 출발합니다.\")\n"
+      ],
+      "metadata": {
+        "id": "CY0-HMC098y8",
+        "outputId": "7f909a3d-c67d-41a1-f979-645c3aaed80c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🔴 신호 대기 중...\n",
+            "신호등 색상 입력 (red/green): red\n",
+            "🔴 신호 대기 중...\n",
+            "신호등 색상 입력 (red/green): green\n",
+            "🟢 신호 변경됨! 출발합니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "속도 제한 지킬 때까지 감속"
+      ],
+      "metadata": {
+        "id": "Mwb1A7jS9_AI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "speed = 100  # 현재 속도 km/h\n",
+        "\n",
+        "while speed > 60:\n",
+        "    print(\"🚗 감속 중... 현재 속도:\", speed)\n",
+        "    speed -= 10\n",
+        "\n",
+        "print(\"✅ 속도 제한 준수 완료! 현재 속도:\", speed)\n"
+      ],
+      "metadata": {
+        "id": "w1jVbp1P9_6i",
+        "outputId": "bfbb028f-070a-4edf-b33d-2d9cef01788d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🚗 감속 중... 현재 속도: 100\n",
+            "🚗 감속 중... 현재 속도: 90\n",
+            "🚗 감속 중... 현재 속도: 80\n",
+            "🚗 감속 중... 현재 속도: 70\n",
+            "✅ 속도 제한 준수 완료! 현재 속도: 60\n"
           ]
         }
       ]
