Colab을 통해 생성됨

--- a/0627_python_Dictionaries.ipynb
+++ b/0627_python_Dictionaries.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+WuMz0lRfRQnLnd7rzGXu",
+      "authorship_tag": "ABX9TyOs9VvcwniI6VPCxc4Nc2O+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -320,6 +320,143 @@
           "name": "stdout",
           "text": [
             "주차장 빈자리: {'A구역': 5, 'B구역': 0, 'C구역': 12, 'D구역': 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "센서 데이터 정리"
+      ],
+      "metadata": {
+        "id": "m-jOT3vS3XvO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sensors = [\"front\", \"left\", \"right\", \"rear\"]\n",
+        "distances = [1.2, 0.5, 0.6, 1.0]\n",
+        "\n",
+        "sensor_data = {s: d for s, d in zip(sensors, distances)}\n",
+        "print(sensor_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9QbwYZLV3Yg-",
+        "outputId": "6a42396f-328c-4dba-ae90-e2c1c9d19179"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'front': 1.2, 'left': 0.5, 'right': 0.6, 'rear': 1.0}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "위험 감지 (0.7m 이하만 추출)"
+      ],
+      "metadata": {
+        "id": "vNQmkRBg3bAv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "danger_zones = {s: d for s, d in sensor_data.items() if d < 0.7}\n",
+        "print(danger_zones)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rpLP_ttK3b-U",
+        "outputId": "ca719f55-82ee-4e76-d6fa-9e9d37cc447c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'left': 0.5, 'right': 0.6}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "속도 단위 변환 (km/h → m/s)"
+      ],
+      "metadata": {
+        "id": "MsKQWp3H3d8y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vehicle_speeds_kmh = {\"car1\": 36, \"car2\": 72, \"car3\": 54}\n",
+        "vehicle_speeds_mps = {v: round(kmh * 1000 / 3600, 2) for v, kmh in vehicle_speeds_kmh.items()}\n",
+        "print(vehicle_speeds_mps)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Jxm6ilS3fQs",
+        "outputId": "1d379785-7431-4b71-b91d-683d2d67f95d"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'car1': 10.0, 'car2': 20.0, 'car3': 15.0}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "경로 좌표 정리 (딕셔너리로 인덱싱)"
+      ],
+      "metadata": {
+        "id": "e_AOeNAQ3hOB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path = [(37.1, 127.1), (37.2, 127.2), (37.3, 127.3)]\n",
+        "path_dict = {i: coord for i, coord in enumerate(path)}\n",
+        "print(path_dict)"
+      ],
+      "metadata": {
+        "id": "8ONHcFnn3i16",
+        "outputId": "dc36d96f-a57f-4ac5-cad0-1f9068048901",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0: (37.1, 127.1), 1: (37.2, 127.2), 2: (37.3, 127.3)}\n"
           ]
         }
       ]
